refactor: refactorizando todo el proyecto para integrar con flutter o ionic