@@ -1,133 +1,104 @@
 package comidev.comistore.components.user;
 
 import java.util.List;
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import comidev.comistore.components.role.RoleName;
-import comidev.comistore.components.role.RoleRepo;
-import comidev.comistore.components.user.dto.Passwords;
-import comidev.comistore.components.user.dto.UserReq;
-import comidev.comistore.components.user.dto.UserRes;
+import comidev.comistore.components.auth.request.AuthLogin;
+import comidev.comistore.components.role.RoleService;
+import comidev.comistore.components.role.util.RoleName;
+import comidev.comistore.components.user.request.UserCreate;
+import comidev.comistore.components.user.request.UserUpdate;
+import comidev.comistore.components.user.response.UserDetails;
 import comidev.comistore.exceptions.HttpException;
-import comidev.comistore.services.jwt.JwtService;
-import comidev.comistore.services.jwt.Payload;
-import comidev.comistore.services.jwt.Tokens;
 import lombok.AllArgsConstructor;
 
 @Service
 @AllArgsConstructor
 public class UserService {
     private final UserRepo userRepo;
-    private final RoleRepo roleRepo;
-    private final JwtService jwtService;
+    private final RoleService roleService;
     private final BCryptPasswordEncoder bcrypt;
 
-    private User save(UserReq userReq, RoleName roleName) {
-        boolean existsUsername = userRepo.existsByUsername(userReq.getUsername());
-        if (existsUsername) {
-            String message = "El username ya existe!!!";
-            throw new HttpException(HttpStatus.CONFLICT, message);
-        }
-
-        String passwordEncode = bcrypt.encode(userReq.getPassword());
-        User userNew = new User(userReq.getUsername(), passwordEncode);
-        userNew.getRoles().add(roleRepo.findByName(roleName));
-        return userRepo.save(userNew);
-    }
-
-    public List<UserRes> findAll() {
+    public List<UserDetails> getAllUsers() {
         return userRepo.findAll().stream()
-                .map(UserRes::new)
-                .toList();
+                .map(UserDetails::new)
+                .collect(Collectors.toList());
     }
 
-    public UserRes saveAdmin(UserReq userReq) {
-        return new UserRes(save(userReq, RoleName.ADMIN));
+    public UserDetails getUserById(Long id) {
+        return new UserDetails(findUserById(id));
     }
 
-    public User saveCliente(UserReq userReq) {
-        return save(userReq, RoleName.CLIENTE);
+    public User findUserById(Long id) {
+        return userRepo.findById(id).orElseThrow(() -> {
+            String message = "No se encuentra el User(id=" + id + ")";
+            return new HttpException(HttpStatus.NOT_FOUND, message);
+        });
     }
 
     public boolean existsUsername(String username) {
         return userRepo.existsByUsername(username);
     }
 
-    public boolean updatePassword(Long id, Passwords passwords) {
-        User userDB = userRepo.findById(id)
-                .orElseThrow(() -> {
-                    String message = "El usuario con es id no existe!!!!";
-                    throw new HttpException(HttpStatus.NOT_FOUND, message);
-                });
+    public UserDetails registerUserAdmin(UserCreate body) {
+        return new UserDetails(registerUser(body, RoleName.ADMIN));
+    }
 
-        boolean passwordIsCorrect = bcrypt
-                .matches(passwords.getCurrentPassword(), userDB.getPassword());
+    public User registerCustomer(UserCreate body) {
+        return registerUser(body, RoleName.CLIENTE);
+    }
 
-        if (!passwordIsCorrect) {
-            String message = "Password incorrecto!!!";
-            throw new HttpException(HttpStatus.UNAUTHORIZED, message);
+    private User registerUser(UserCreate body, RoleName roleName) {
+        if (userRepo.existsByUsername(body.getUsername())) {
+            String message = "El username ya existe!!!";
+            throw new HttpException(HttpStatus.CONFLICT, message);
         }
 
-        userDB.setPassword(passwords.getNewPassword());
-        userRepo.save(userDB);
-        return true;
+        body.setPassword(bcrypt.encode(body.getPassword()));
+        User userNew = new User(body, roleService.initRole(roleName));
+        return userRepo.save(userNew);
     }
 
-    private User findByUsername(String username) {
-        return userRepo.findByUsername(username)
-                .orElseThrow(() -> {
-                    String message = "Credenciales incorrectas";
-                    return new HttpException(HttpStatus.UNAUTHORIZED, message);
-                });
+    public void updateUser(User user, UserUpdate body) {
+        String current = body.getCurrentPassword();
+        validatePassword(current, user);
 
+        String password = current.equals(body.getNewPassword())
+                ? user.getPassword()
+                : bcrypt.encode(body.getNewPassword());
+        body.setNewPassword(password);
+
+        user.update(body);
+        userRepo.save(user);
     }
 
-    public Tokens login(UserReq userReq) {
-        User userDB = findByUsername(userReq.getUsername());
-        String passwordDB = userDB.getPassword();
+    public void deleteUser(User user, String password) {
+        validatePassword(password, user);
+        userRepo.delete(user);
+    }
 
-        if (!bcrypt.matches(userReq.getPassword(), passwordDB)) {
+    public User login(AuthLogin body) {
+        User userDB = findByUsername(body.getUsername());
+        validatePassword(body.getPassword(), userDB);
+        return userDB;
+    }
+
+    private void validatePassword(String password, User user) {
+        if (!bcrypt.matches(password, user.getPassword())) {
             String message = "Credenciales incorrectas";
             throw new HttpException(HttpStatus.UNAUTHORIZED, message);
         }
-
-        List<String> roles = userDB.getRoles().stream()
-                .map(item -> item.getName().toString())
-                .toList();
-
-        return jwtService.createTokens(new Payload(
-                userDB.getId(),
-                userDB.getUsername(),
-                roles));
     }
 
-    public Tokens tokenGenerate(String roleName) {
-        Long id = (long) (Math.random() * 1000);
-        String username = "Test Swagger: " + UUID.randomUUID().toString();
-        List<String> roles = List.of(roleName);
-        return jwtService.createTokens(new Payload(id, username, roles));
-    }
+    private User findByUsername(String username) {
+        return userRepo.findByUsername(username).orElseThrow(() -> {
+            String message = "Credenciales incorrectas";
+            return new HttpException(HttpStatus.UNAUTHORIZED, message);
+        });
 
-    public Tokens tokenRefresh(String bearerToken) {
-        Payload payload = jwtService.verify(bearerToken);
-        return jwtService.createTokens(payload);
-    }
-
-    public void tokenValidate(String bearerToken) {
-        jwtService.verify(bearerToken);
-    }
-
-    public void updateUsername(String usernamePrev, String usernameNew) {
-        if (userRepo.existsByUsername(usernameNew)) {
-            String message = "El nuevo username ya existe!!";
-            throw new HttpException(HttpStatus.CONFLICT, message);
-        }
-        User userDB = findByUsername(usernamePrev);
-        userDB.setUsername(usernameNew);
-        userRepo.save(userDB);
     }
 }
